--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Chris' DS Blog
+title: Data Science Blog
 description: An simple blog with support from fastpages.
 github_username: christopherGuan
 # you can comment the below line out if your repo name is not different than your baseurl
@@ -49,7 +49,7 @@ use_math:
 show_description: true
 
 # Set this to true to display image previews on home page, if they exist
-show_image: true
+show_image: false
 
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
 annotations: false
