--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ baseurl: "/sample-ds-blog" # the subpath of your site, e.g. "/blog".
 minima:
   social_links:
     twitter: fastdotai
-    github: fastai
+    github: christopherGuan
 
 # Set this to true to get LaTeX math equation support
 use_math: 
