--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Data Science Blog
-description: An simple blog with support from fastpages.
+description: This site is built with [fastpages](https://github.com/fastai/fastpages).
 github_username: christopherGuan
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "sample-ds-blog"
